clang/test/BSC/Negative/Generic/StructAndFunction/redefinition_a_template_struct/redefinition_a_template_struct.cbs
// RUN: %clang_cc1  -verify %s
 
struct S<T> {   //expected-note{{previous definition is here}} expected-note{{previous definition is here}}
   _Bool isPending;
   T res;
};

struct S<T> {  //expected-error{{redefinition of 'S'}} expected-error{{expected identifier or '('}}
   _Bool isPending;
   T res;
};

struct S<T1> {   //expected-error{{redefinition of 'S'}} expected-error{{expected identifier or '('}}
   _Bool isPending;
   T1 res;
};

int main() {
    struct S<int> s;
    return 0;
}
